--- a/app/src/main/res/layout/list_cardlayout.xml
+++ b/app/src/main/res/layout/list_cardlayout.xml
@@ -8,15 +8,15 @@
     android:padding="10dp">
 
     <ImageView
-        android:id="@+id/list_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/overview_image"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="5dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_launcher" />
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/overview_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -25,18 +25,6 @@
         android:textColor="#040404"
         android:textStyle="bold"
         android:typeface="sans"
-        android:layout_toRightOf="@+id/list_image"/>
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:text="Create an NFC Pet Tag"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/secondary_text_dark"
-        android:textStyle="bold"
-        android:layout_toRightOf="@+id/list_image"
-        android:layout_below="@+id/title"/>
+        android:layout_toRightOf="@+id/overview_image"/>
 
 </RelativeLayout>
